--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .c-container{
+        @apply max-w-screen-xl mx-auto px-5 md:px-10
+    }
+}
